# corrective-rag

./: .env.example  .gitignore  README.md  pyproject.toml
src/rag/: __init__.py  clients.py  config.py  main.py
src/rag/agents/: __init__.py  corrective.py  prompts.py  simple.py
src/rag/knowledge_base/: provisioner.py
src/rag/tools/: __init__.py  relevance.py  search.py
