[project]
name = "corrective-rag"
version = "0.1.0"
description = "Corrective RAG system using Strand Agents with Amazon Bedrock"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opensearch-py",
    "retrying",
    "strands-agents",
    "strands-agents-tools",
    "langchain-aws",
    "langchain-community",
    "tavily-python",
    "boto3",
    "langchain",
    "ragas",
    "urllib3>=2.6.0",
    "filelock>=3.20.1",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "requests",
]

[project.scripts]
rag = "rag.main:main"
rag-provision-kb = "rag.knowledge_base.provisioner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
